# Qt20

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/qt20/Core/: AbstractAnimation  Object
include/qt20/GUI/: Action
include/qt20/widgets/: App  LayoutItem  Widget  Window
src/Core/: AbstractAnimation.cpp  Object.cpp
src/GUI/: Action.cpp
src/widgets/: App.cpp  LayoutItem.cpp  Widget.cpp  Window.cpp
